--- a/css/heroic-features.css
+++ b/css/heroic-features.css
@@ -7,6 +7,6 @@ body {
   padding-top: 56px;
 }
 .jumbotron {
-  background-image: url("../IMG/UNIT01.jpg");
+  background-image: url("https://fandinod.github.io/americanconventions/IMG/UNIT02.jpg");
   background-size: cover;
 }
